finished ungrading week0

--- a/week0/ungrading.ipynb
+++ b/week0/ungrading.ipynb
@@ -226,6 +226,29 @@
     "./heap\n",
     "rm heap"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2394b277",
+   "metadata": {},
+   "source": [
+    "# Outcome and Reflection\n",
+    "\n",
+    "## Leo's Strengths\n",
+    "    - helper functions make code 1 million times easier to read\n",
+    "    - good documentation and formatting\n",
+    "    - all memory logic is under the hood\n",
+    "    - python handles amortized growth optimially already\n",
+    "## My Strengths\n",
+    "    - amortized growth for array reallocation \n",
+    "    - compact and memory efficient\n",
+    "    - full control over array\n",
+    "\n",
+    "## What I did wrong\n",
+    "    My main two problems were that I did not document enough and I did not use helper functions. By inlining the bubbleUp and bubbleDown functions into the add and remove functions I made the code harder to read.  I found out after doing some research I found that even if I were to make one billion helper functions to document every little change, I could simply use an optimization flag and the GNU compiler would inline my functions while compiling thus making the difference trivial\n",
+    "\n",
+    "    If I were to redo this assignment I would make a helper function for the bubbleUp and bubleDown as well as the swap function"
+   ]
   }
  ],
  "metadata": {
